# WhiteSpaceRemover

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
includes/: DirectoryReader.hpp  PathProcessor.hpp  SpaceRemover.hpp  WhiteSpaceRemover.hpp
includes/interfaces/: IDirectoryReader.hpp  IPathProcessor.hpp  ISpaceRemover.hpp
sources/: DirectoryReader.cpp  PathProcessor.cpp  SpaceRemover.cpp  WhiteSpaceRemover.cpp
